--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -222,7 +222,7 @@
                 </ul>
               </div>
               <div class="menu-promo">
-                <img src="/assets/logoP.png" alt="Ofertas especiales" />
+                <img src="/assets/image.png" alt="Ofertas especiales" />
                 <div class="promo-content">
                   <h5>Ofertas Especiales</h5>
                   <p>Hasta 30% de descuento</p>
