--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -170,9 +170,9 @@
       <div class="offer-content">
         <div class="offer-badge">
           <span class="material-symbols-outlined">local_offer</span>
-          OFERTA ESPECIAL
+          PRODUCTO ESPECIAL
         </div>
-        <h2>¡Descuentos de hasta 30% en instrumentos seleccionados!</h2>
+        <h2>¡Descuentos de hasta 30% en guitarras!</h2>
         <p>Aprovecha nuestras ofertas exclusivas en guitarras, pianos y más. Oferta válida hasta fin de mes.</p>
         <button class="btn-accent" (click)="viewOffers()">
           <span class="material-symbols-outlined">shopping_cart</span>
@@ -180,7 +180,7 @@
         </button>
       </div>
       <div class="offer-image">
-        <img src="/assets/logoP.png" alt="Ofertas especiales" />
+        <img src="/assets/image.png" alt="Ofertas especiales" />
       </div>
     </div>
   </div>
